@@ -1,8 +1,7 @@
 package gov.cabinetoffice.api.prototype.services;
 
 import gov.cabinetoffice.api.prototype.dtos.submission.SubmissionDTO;
-import gov.cabinetoffice.api.prototype.dtos.submission.SubmissionsDTO;
-import gov.cabinetoffice.api.prototype.entities.Submission;
+import gov.cabinetoffice.api.prototype.dtos.submission.SubmissionListDTO;
 import gov.cabinetoffice.api.prototype.exceptions.SubmissionNotFoundException;
 import gov.cabinetoffice.api.prototype.mappers.SubmissionMapper;
 import gov.cabinetoffice.api.prototype.repositories.SubmissionRepository;
@@ -10,6 +9,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,18 +19,19 @@ public class SubmissionsService {
 
 	private final SubmissionMapper submissionMapper;
 
-	public SubmissionsDTO getSubmissionByApplicationId(int applicationId) {
-		final List<Submission> submissions = submissionRepository.findByApplicationGrantApplicationId(applicationId);
+	public SubmissionListDTO getSubmissionByApplicationId(int applicationId) {
 
-		if (submissions.isEmpty()) {
-			throw new SubmissionNotFoundException("No submissions found with application id " + applicationId);
-		}
-		else {
-			final List<SubmissionDTO> submissionDTOList = submissions.stream()
-				.map(submissionMapper::submissionToSubmissionDto)
-				.toList();
-			return SubmissionsDTO.builder().submissions(submissionDTOList).build();
-		}
+		final List<SubmissionDTO> submissionDTOS = submissionRepository
+			.findByApplicationGrantApplicationId(applicationId)
+			.stream()
+			.map(submissionMapper::submissionToSubmissionDto)
+			.collect(Collectors.collectingAndThen(Collectors.toList(), result -> {
+				if (result.isEmpty())
+					throw new SubmissionNotFoundException("No submissions found with application id " + applicationId);
+				return result;
+			}));
+
+		return SubmissionListDTO.builder().submissions(submissionDTOS).build();
 	}
 
 }
